@@ -20,8 +20,6 @@ Improvements
 
 * SOLR-16536: Replace OpenTracing instrumentation with OpenTelemetry (Alex Deparvu, janhoy)
 
-* SOLR-17011: Add tracing spans to internal collection commands (Alex Deparvu)
-
 Optimizations
 ---------------------
 (No changes)
@@ -91,6 +89,10 @@ Improvements
 
 * SOLR-16397: Swap core v2 endpoints have been updated to be more REST-ful.
   SWAP is now available at `POST /api/cores/coreName/swap` (Sanjay Dutt via Jason Gerlowski)
+
+* SOLR-17011: Add tracing spans to internal collection commands (Alex Deparvu)
+
+* SOLR-17041: Make CommitTracker currentTlogSize lazy (Alex Deparvu)
 
 Optimizations
 ---------------------
